--- a/cv_web_app_form.html
+++ b/cv_web_app_form.html
@@ -74,7 +74,10 @@
         </select>
 
         <label>الخدمة الوطنية:</label>
-        <input type="text" name="military_service">
+        <select name="marital_status">
+            <option>مؤدي</option>
+            <option>معفى</option>
+            <option>غير معني</option>
 
         <label>العنوان:</label>
         <input type="text" name="address">
